IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/22/13: IMOD_4-6-20
3/13/13: Tiltxcorr can do its image reduction with antialiasing instead of
simple binning and it has an option to start from the last image at minimum
tilt instead of the first, which reverses the order for untilted images.

3/12/13: Newstack has an option -fromone to allow section and line numbers to
be numbered from 1 instead of 0, and an option -exclude to specify sections to
exclude; Colornewst accepts -fromone but not -exclude.

3/12/13: Newstack can read input with antialias reduction instead of binning,
so -shrink can be combined with essentially all image transformations.

3/7/13: Xfalign can now do cross-correlation only with -params -1.

3/4/13: IMOD_4-6-19
3/3/13: Fixed a problem with recording Exclude Projections in the .edf file.
(Bug# 1686)

3/1/13: Added support for templates to eTomo.(Bug# 1677)

2/27/13: Fixed array allocation problem in Pickbestseed.

2/27/13: Fixed problem of 3dmod quitting during initial load due to messages 
to Bead Fixer.

2/26/13: 3dmod can take an image pyramid (multiple copies of same volume at
different resolutions) and has a new kind of cache that allows rapid access to
subareas at any zoom when a pyramid is loaded; ordinary (non-tiled) files can
also be cached as strips for somewhat faster access.

2/26/13: Fixed suppression of "unknown field" messages in Tif2mrc.

2/23/13: Added script Makepyramid for making an image pyramid.

2/21/13: Fixed bug in Vmstopy when translating cp and mv with a filename
starting with f.

2/21/13: Made Binvol able to use antialiased reduction in Z instead of
binning.

2/10/13: Redefined blank values in batch/template directives to mean unset the
parameter for other than comparams, and required all booleans to be 0 or 1.

2/7/13: Fixed ability of Fortran programs to read more than 2 GB in one call.

2/7/13: Changed Reducemont to PIP input and made it able to handle arbitrarily