@@ -245,7 +245,7 @@ void MovieSequenceForm::runAllClicked()
   int i;
   for (i = 0; i < mSegments->size(); i++) {
     mvMovieSetSegment(mSegments->at(i));
-    if (mvMovieMake())
+    if (mvMovieMake(true))
       break;
   }
 }
