@@ -34,7 +34,8 @@ around a single axis, and the rotation will occur at even
 increments around that axis.  When <B>Write Files</B>  is not selected, the
 movie will proceed at approximately the number of frames per second given in
 the <B>FPS</B> spin box, which allows you to preview a movie before saving
-files.
+files.  If the starting and ending points are the same, then the program will
+ask if you really want to run a movie with such settings.
 <P>
 Press the <B>Stop</B> button to stop after the next display.
 <P>
