@@ -79,7 +79,9 @@ on all segments, running them, saving them to file, or loading from a file.
 <LI> <B>Run All.</B> This button plays the full sequence of movie segments.
   Files are written only if the <B>Write</B> checkbox is turned on in the
   Movie dialog.  The sequence can be stopped with the <B>Stop</B> button in the
-  Movie dialog.
+  Movie dialog.  If a segment produces no change in the display, the frames
+  will be saved without your having to confirm it, unlike when running Make
+  for the segment itself from the Movie dialog.
 <LI> <B>Save.</B> Press this button to save the table to a file.  The data are
   saved in a text file in the BL3DEMC autodoc format, which consists of
   key-value pairs.
